--- a/GM Tienda/package.json
+++ b/GM Tienda/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dom": "^0.0.3",
+    "dotenv": "^16.4.5",
     "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
